--- a/logged-in.css
+++ b/logged-in.css
@@ -436,8 +436,15 @@
                             float: right;
                             top: 90%;
                             right: 10%;
+                            width: 54px;
+                            height: 54px;
+                            align-items: center;
+                            justify-content: center;
                             z-index: 3;
                             display: none;
+                            border-radius: 50%;
+                            background: linear-gradient(180deg, #FF5C5C 0%, #F0568A 100%);
+                            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.18), 0px 0px 2px rgba(0, 0, 0, 0.08);
                         }
                         
                         #mob-create,
